<resources>
    <string name="app_name">YuConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Text of intro screen    -->
    <string name="title_app">YuConnect!</string>
    <string name="txtLogin">Iniciar Sesión</string>
    <string name="txtGuest">Acceder como Invitado</string>
    <string name="txtSpan">¿Aún no tienes una cuenta?</string>
    <string name="txtRegisterUn"><u>¡REGÍSTRATE!</u></string>

</resources>